--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,5 @@
 
     <color name="text_click_bg">#E6E9EB</color>
     <color name="text_click_bg_press">@color/text_black_99</color>
+    <color name="banner_bg">#334fb3d4</color>
 </resources>
