--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="statusbar_view_height">25dp</dimen>
+    <dimen name="text_normal">14sp</dimen>
+    <dimen name="text_big">18sp</dimen>
 </resources>
