--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,4 +33,5 @@
     <color name="text_click_bg">#E6E9EB</color>
     <color name="text_click_bg_press">@color/text_black_99</color>
     <color name="banner_bg">#334fb3d4</color>
+    <color name="refresh_color">#335280ff</color>
 </resources>
